# agentic-setup

./: .gitignore  LICENSE  NOTICE  README.md
.claude-plugin/: marketplace.json
adversarial-review/: README.md
adversarial-review/.claude-plugin/: plugin.json
adversarial-review/agents/: adversarial-reviewer.md
adversarial-review/skills/adversarial-review/: SKILL.md
verify-suite/: README.md
verify-suite/.claude-plugin/: plugin.json
verify-suite/hooks/: hooks.json  pretooluse_write.sh
verify-suite/lib/: doctype_from_path.py  select_rules.py
verify-suite/skills/artifact-flow/: SKILL.md
verify-suite/skills/verify-content/: SKILL.md
verify-suite/skills/verify-design/: SKILL.md
verify-suite/skills/verify-format/: SKILL.md
verify-suite/skills/verify-note/: SKILL.md
workflow-tracking/: .mcp.json  README.md
workflow-tracking/.claude-plugin/: plugin.json
workflow-tracking/hooks/: advance_nudge.sh  hooks.json
workflow-tracking/mcp/: .gitignore  pyproject.toml  run-server.sh
workflow-tracking/mcp/src/task_tool/: __main__.py  errors.py  history.py  models.py  server.py  state.py  validator.py  yaml_parser.py
workflow-tracking/mcp/tests/: conftest.py  test_ac_accumulation.py  test_active_plan.py  test_history.py  test_integration.py  test_join.py  test_mcp_transport.py  test_metadata_mcp.py  test_phase1.py  test_phase2_mcp.py  test_phase3_mcp.py  test_phase4_mcp.py  test_phase5_mcp.py  test_phase6_metadata.py  test_registry.py  test_soft_gate.py  test_state.py  test_structured_params_mcp.py  test_validator.py  test_workflow_roundtrip.py
(+63 files in other folders)
