[project]
name = "task-tool"
version = "0.1.0"
description = "MCP task workflow tool — Phase 1 core loop"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "mcp[cli]",
]

[project.scripts]
task-tool = "task_tool.server:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
